# factor-regime-research-platform

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  ROADMAP.md  dashboard.py  pyproject.toml  requirements.txt  run_agent.py
.github/workflows/: ci.yml
data/: ccc_oas_history.csv
docs/: architecture.md  assumptions.md  methodology.md
docs/adr/: 0001-python.md  0002-public-data.md  0003-interpretability.md  0004-rolling-recalibration.md  0005-french-factors-vs-etf-proxies.md  0006-regime-break-risk-monitoring.md  0007-canonical-run-result-schema.md
src/factor_agent/: agent.py  analog.py  backtest.py  brief.py  config.py  data.py  features.py  french.py  model.py  quality.py  risk.py  schema.py  scores.py  signal_validation.py
tests/: conftest.py  test_agent_contract.py  test_agent_smoke.py  test_backtest.py  test_brief_quality_risk.py  test_dashboard_contract.py  test_engines.py  test_factor_sources.py  test_features.py  test_risk.py  test_schema.py  test_scores.py  test_signal_validation.py
tests/fixtures/: sample_french_factors.csv  sample_macro.csv  sample_prices.csv  sample_run_result.json
