[project]
name = "factor-regime-agent"
version = "0.6.1"
description = "Interpretable factor-regime research platform for daily market briefs."
requires-python = ">=3.11,<3.13"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint.per-file-ignores]
"tests/test_engines.py" = ["E402"]

[tool.pytest.ini_options]
pythonpath = ["src"]
