[project]
name = "factor-regime-agent"
version = "0.6.1"
description = "Interpretable factor-regime research platform for daily market briefs."
requires-python = ">=3.11,<3.13"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
